tests/ui/feature-gates/feature-gate-assoc-type-defaults.stderr
error[E0658]: associated type defaults are unstable
  --> $DIR/feature-gate-assoc-type-defaults.rs:4:5
   |
LL |     type Bar = u8;
   |     ^^^^^^^^^^^^^^
   |
   = note: see issue #29661 <https://github.com/rust-lang/rust/issues/29661> for more information
   = help: add `#![feature(associated_type_defaults)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
